# zaisen

./: Cargo.toml  Rocket.toml
migrations/2018-03-05-160610_create_room/: up.sql
migrations/2018-03-05-161206_create_user/: up.sql
migrations/2018-03-05-161545_create_task/: up.sql
migrations/2018-03-05-162317_create_recruit/: down.sql  up.sql
scripts/: launch_db.sh
src/: lib.rs
src/database/: mod.rs  records.rs  schema.rs
src/model/: mod.rs
src/repository/: mod.rs
src/usecase/: create_recruit.rs  mod.rs
src/web/: main.rs
src/web/templates/: index.html.hbs
test/: create_recruit.json
